@@ -69,7 +69,7 @@ getKnownS3generics <-
 function()
     c(names(.knownS3Generics), tools:::.get_internal_S3_generics())
 
-methods <-
+.S3methods <-
 function(generic.function, class)
 {
     rbindSome <- function(df, nms, msg) {
@@ -96,7 +96,7 @@ function(generic.function, class)
     an <- an[!duplicated(an)] # removed masked objects, *keep* names
     names(an) <- sub("[0-9]*$", "", names(an))
     info <- data.frame(visible = rep.int(TRUE, length(an)),
-                       from = names(an),
+                       from = sub("package:", "", names(an)),
                        row.names = an)
     if (!missing(generic.function)) {
 	if (!is.character(generic.function))
@@ -107,11 +107,11 @@ function(generic.function, class)
            !any(generic.function == c("Math", "Ops", "Complex", "Summary")))
             stop(gettextf("no function '%s' is visible", generic.function),
                  domain = NA)
+        warn.not.generic <- FALSE
         if(!any(generic.function == knownGenerics)) {
             truegf <- findGeneric(generic.function, parent.frame())
             if(truegf == "")
-                warning(gettextf("function '%s' appears not to be generic",
-                                 generic.function), domain = NA)
+                warn.not.generic <- TRUE
             else if(truegf != generic.function) {
                 warning(gettextf("generic function '%s' dispatches methods for generic '%s'",
                         generic.function, truegf), domain = NA)
@@ -125,6 +125,9 @@ function(generic.function, class)
         ## check that these are all functions
         ## might be none at this point
         if(nrow(info)) {
+            if (warn.not.generic)
+                warning(gettextf("function '%s' appears not to be an S3 generic",
+                                 generic.function), domain = NA)
             keep <- sapply(row.names(info),
                            function(nm) exists(nm, mode="function"))
             info <- info[keep, ]
@@ -189,26 +192,67 @@ function(generic.function, class)
     }
     else stop("must supply 'generic.function' or 'class'")
 
-    info <- info[sort.list(row.names(info)), ]
+    info$generic <- if (!missing(generic.function))
+        rep(generic.function, nrow(info))
+    else sub(paste0("\\.", class, "$"), "", row.names(info))
+    info$isS4 <- rep(FALSE, nrow(info))
+
+    info <- info[sort.list(row.names(info)), , drop=FALSE]
     res <- row.names(info)
     class(res) <- "MethodsFunction"
     attr(res, "info") <- info
+    attr(res, "byclass") <- missing(generic.function)
     res
+}
+
+methods <-
+function(generic.function, class)
+{
+    if (!missing(generic.function) && !is.character(generic.function))
+        generic.function <- deparse(substitute(generic.function))
+    if (!missing(class) && !is.character(class))
+        class <- paste(deparse(substitute(class)))
+
+    s3 <- .S3methods(generic.function, class)
+    s4 <- if (.isMethodsDispatchOn()) {
+        methods::.S4methods(generic.function, class)
+    } else NULL
+
+    .MethodsFunction(s3, s4, missing(generic.function))
+}
+
+.MethodsFunction <-
+function(s3, s4, byclass)
+{
+    info3 <- attr(s3, "info")
+    info4 <- attr(s4, "info")
+    info <- rbind(info3, info4)
+    dups <- duplicated(c(rownames(info3), rownames(info4)))
+    info <- info[!dups, , drop=FALSE]
+    info <- info[order(rownames(info)), , drop=FALSE]
+    structure(rownames(info), info=info, byclass=byclass,
+              class="MethodsFunction")
 }
 
 print.MethodsFunction <-
 function(x, ...)
 {
-    visible <- attr(x, "info")[["visible"]]
-    if(length(x)) {
-	print(paste0(x, ifelse(visible, "", "*")), quote=FALSE, ...)
-        if(any(!visible))
-            cat("\n", "   ",
-                "Non-visible functions are asterisked", "\n", sep = "")
-    } else cat("no methods were found\n")
+    info <- attr(x, "info")
+    if (attr(x, "byclass")) {
+        values <- unique(info$generic)
+    } else {
+        visible <- ifelse(info$visible, "", "*")
+        values <- paste0(rownames(info), visible)
+    }
+
+    if (length(values)) {
+        print(noquote(values))
+        cat("see '?methods' for accessing help and source code\n")
+    } else
+        cat("no methods found\n")
+
     invisible(x)
 }
-
 
 getS3method <-
 function(f, class, optional = FALSE)
