@@ -3260,7 +3260,7 @@ Error in `[.data.frame`(x, 1, c("a", "c")) : undefined columns selected
 > 
 > ## methods(class = ) with namespaces, .Primitives etc (many missing in 1.7.x):
 > meth2gen <- function(cl)
-+     noquote(sub(paste("\\.",cl,"$",sep=""),"", c(methods(class = cl))))
++     noquote(sub(paste("\\.",cl,"$",sep=""),"", c(.S3methods(class = cl))))
 > meth2gen("data.frame")
  [1] $             $<-           Math          Ops           Summary      
  [6] [             [<-           [[            [[<-          aggregate    
